2006-04-26 11:47  skvidal

	* yum.spec, yum/__init__.py: 
	version change

2006-04-26 11:29  katzj

	* docs/yum.8: add some more clean options (#575)

2006-04-25 01:59  skvidal

	* yum/: __init__.py, sqlitesack.py: 
	prune out some of the exact duplicates

2006-04-20 15:26  katzj

	* cli.py: handle exclude used with localinstall or localupdate
	(rh#178741)

2006-04-19 18:16  skvidal

	* yum/__init__.py: 
	make the debug output a bit nicer

2006-04-19 18:15  skvidal

	* yum/sqlitesack.py: 
	hopeful fix for partial provide bug

2006-04-19 10:59  katzj

	* yum/repos.py: ensure consistent access of proxy information so
	that it's always set up even if you're not setting up all the repo
	callbacks (rh#185309)
	
	also, use the proxies for grabbing the mirror list (rh#161190)

2006-03-29 14:11  skvidal

	* output.py: 
	list epoch in yum info if it exists/is non-zero - bug #576

2006-03-27 07:47  mjs

	* yum/config.py: Copied in option default handling changes from
	HEAD.

2006-03-22 14:39  katzj

	* yum/__init__.py: don't traceback if conditionals have
	non-existent packages (rh#185946)

2006-03-14 17:19  skvidal

	* shell.py: 
	patch to enable sorting of repos in the repo list in the shell -
	bug #568 from Noah Friedman

2006-03-06 23:41  skvidal

	* ChangeLog: 
	changelog check in

2006-03-06 23:38  skvidal

	* yum.spec: 
	remove silly versioned req

2006-03-06 23:38  skvidal

	* yum.spec, yum/__init__.py: 
	2.6.0 in spec and init scripts

2006-03-06 17:28  pnasrat

	* yum/__init__.py: Return error list

2006-03-04 11:09  katzj

	* docs/yum.conf.5, etc/yum.conf, yum/__init__.py, yum/config.py:
	new option 'keepcache' to allow the cache of packages and headers
	to be automatically purged after successful package installation. 
	the default behavior remains to keep things (as previously)

2006-03-03 16:59  katzj

	* yum/transactioninfo.py: we also need to invalidate the sort on
	txmbr add/remove and then _sorted can be used as the overall key of
	if we need to do the sort