@@ -61,8 +61,7 @@ class YumBase(depsolve.Depsolve):
         depsolve.Depsolve.__init__(self)
         self.localdbimported = 0
         self.repos = repos.RepoStorage() # class of repositories
-        if (not self.repos.sqlite):
-            self.log(1,"Warning, could not load sqlite, falling back to pickle")
+        self.log(1, "Using %s storage" % self.repos.storage.Name())
 
         # Start with plugins disabled
         self.disablePlugins()
